@@ -9,6 +9,7 @@ Red5 0.5    (unreleased)
 New features:
 - frame dropping for live streams depending on available bandwidth
 - added "receiveAudio", "receiveVideo" and "send" for streams
+- destination of recorded streams can be customizer (Trac #73)
 
 Bugfixes:
 - only the same instances are serialized as references (Trac #58)
